--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,7 +1,9 @@
+@import url('https://fonts.googleapis.com/css2?family=Inter:wght@100..900&family=Montserrat:ital,wght@0,100..900;1,100..900&display=swap');
+
 html,body{
     background: #EC7809;
     object-fit: cover;
-    font-family:cursive;
+    font-family: "Montserrat", sans-serif;
 }
 
 #bg 
